[MODINVOICE-613]. Revert collector changes